ajout du catalogue, pharmacie, parapharmacie et header connexion

--- a/default.css
+++ b/default.css
@@ -293,6 +293,10 @@ ul.contact li a.icon-rss:before
 	background: #FFF;
 }
 
+#logged{
+    margin : 3em 0em;
+}
+
 #featured-wrapper
 {
 	overflow:  hidden;
